Fix #484: Consolidate ZenId verification ID
RequiredDocumentTypesCheck does not verify document status anymore